Thu Apr 10 16:58:44 2008  Tanaka Akira  <akr@fsij.org>

	* marshal.c (w_object): TYPE_USERDEF assigns id for ivars first.
	  [ruby-dev:34159] by nagachika.

Thu Apr 10 15:03:47 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/generator.rb: removed obsolete library.  [ruby-core:16233]

	* lib/pstore.rb: replaced by Hongli Lai's faster version.

Thu Apr 10 10:27:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (native_sleep): sleep_cond is initialized at
	  creation.  [ruby-Patches-19361].

Wed Apr  9 14:43:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (lock_func): optimized and checks for interrupt_flag.
	  based on a patch from Sylvain Joyeux in [ruby-Patches-19361] and
	  [ruby-Patches-19362].

Wed Apr  9 12:12:01 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_thread.rb: new tests from Sylvain Joyeux in
	  [ruby-Patches-19361].

Tue Apr  8 21:36:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_mutex_sleep): ensures to re-acquire at waking up.
	  [ruby-Patches-19361]

Tue Apr  8 11:00:14 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/complex.rb: remove Math first before overwriting by CMath.

Tue Apr  8 10:34:10 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* load.c (rb_require_safe): should check fname path after $SAFE is
	  properly set.  [ruby-dev:34268]

	* re.c (rb_reg_quote): should always copy the quoting string.
	  [ruby-core:16235]

Tue Apr  8 10:30:29 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (prelude.c): depends on enc/prelude.rb.

	* enc/prelude.rb: fixed initial library names.

Tue Apr  8 03:39:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_provided): check expanded path for relative path
	  features, loading or loaded features are already expanded in 1.9.

	* variable.c (rb_autoload_load): no needs to check if provided before
	  rb_require_safe.  [ruby-dev:34266]

Mon Apr  7 22:41:21 2008  Tadayoshi Funaba  <tadf@dotrb.org>
